tests/checker/bad/bad_adt_3.scilla
scilla_version 0

(***************************************************)
(*               Associated library                *)
(***************************************************)
library WalletLib

type TestType1 =
| Item1 of Int32
| Item2

type TestType2 =
| Item1 of Int32
| Item3

contract BadLib ()
